removed j from email typo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:jluispinedda@gmail.com" target="_blank">luispinedda@gmail.com</a></li>
+				<li>e: <a href="mailto:luispinedda@gmail.com" target="_blank">luispinedda@gmail.com</a></li>
 				<li>w: <a href="https://luis-pineda.github.io">https://luis-pineda.github.io</a></li>
 				<li>m: 01234567890</li>
 			</ul>
