--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width"/>
 <meta name="description" content="The Curriculum Vitae of Luis Pineda."/>
 <meta charset="UTF-8"> 
-
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
